# twitch-clip-miner

./: .gitignore  LICENSE.txt  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  review.py  test.py
docs/: NOOB_GUIDE.md  RESOURCES.md
src/: audio.py  chat_parser.py  chunker.py  clipper.py  detector.py  downloader.py  summarizer.py  transcriber.py  transcriber_whisper_cpp.py  utils.py  vision.py
